# limn

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LORA_PATCH_SPEC.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: desktop.yml  pages.yml
deploy/: .env.example  docker-compose.yml  limn.yaml.example
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html
docs/: demo-deploy.md
landing/: CNAME  index.html
src/limn/: __init__.py  __main__.py  cli.py  config.py  core.py  serve.py  serve_page.html
src/limn/providers/: __init__.py  base.py  gemini.py  openai_compat.py  swarmui.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_demo.py  test_providers.py  test_serve.py
