[package]
name = "limn-desktop"
version = "0.1.1"
description = "Limn — privacy-first text-to-image, on your desktop"
authors = ["Michael Borck <michael.borck@curtin.edu.au>"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"

[profile.release]
strip = true
lto = true
